syntax = "proto3";
package topk.ctx.v1;

import "topk/data/v1/value.proto";
import "topk/data/v1/expr/logical.proto";

service ContextService {
    // Get a summarized answer to a question based on provided sources.
    rpc Ask(AskRequest) returns (stream AskResponseMessage);

    // Get search results from the provided sources.
    rpc Search(SearchRequest) returns (stream SearchResult);
}

message Source {
    string dataset = 1;
    topk.data.v1.LogicalExpr filter = 2;
}

message SearchResult {
    string doc_id = 1;
    string doc_type = 2;
    string dataset = 3;
    Content content = 4;
    map<string, topk.data.v1.Value> metadata = 5;
}

message Content {
    oneof data {
        Chunk chunk = 1;
        Page page = 2;
        Image image = 3;
    }
}

message Page {
    uint32 page_number = 1;
    Image image = 2;
}

message Chunk {
    string text = 1;
    repeated uint32 doc_pages = 2;
}

message Image {
    bytes data = 1;
    string mime_type = 2;
}

message Fact {
    string fact = 1;
    repeated string ref_ids = 2;
}

enum Mode {
    MODE_UNSPECIFIED = 0;
    MODE_SUMMARIZE = 1;
    MODE_REASON = 2;
    MODE_DEEP_RESEARCH = 3;
}

message AskRequest {
    // Ask query
    string query = 1;
    // Sources to use for the ask query
    repeated Source sources = 2;
    // Filter applied globally to all sources
    topk.data.v1.LogicalExpr filter = 3;
    // Mode to use for the ask query
    Mode mode = 4;
    // Metadata fields to return
    repeated string select_fields = 5;
}

message AskResponseMessage {
    message Search {
        string objective = 1;
        repeated Fact facts = 2;
        map<string, SearchResult> refs = 3;
    }

    message Reason {
        string thought = 1;
    }

    message Answer {
        repeated Fact facts = 1;
        map<string, SearchResult> refs = 2;
    }

    oneof message {
        Answer answer = 1;
        Search search = 2;
        Reason reason = 3;
    }
}

message SearchRequest {
    // Search query
    string query = 1;
    // Source datasets for the search
    repeated Source sources = 2;
    // Filter applied globally to all sources
    topk.data.v1.LogicalExpr filter = 3;
    // Maximum number of results to return
    uint32 top_k = 4;
    // Metadata fields to return
    repeated string select_fields = 5;
}
